# omega-pe

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: actions.csv  cohorts.csv  params_baseline.yaml  params_variant_A.yaml  params_variant_B.yaml
out_demo/: aggregate.csv  omega_by_cohort.csv  repair_queue.json
src/omega_pe/: __init__.py  audit.py  cli.py  clustering.py  entropy.py  harm.py  io.py  models.py  repair.py  report.py  viability.py
src/omega_pe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_entropy.py
